# hellocrux

./: .gitignore  Cargo.toml  README.md  dndn  makefile  mprocs.yaml  rust-toolchain.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/java/com/example/simplecounter/: Core.kt  MainActivity.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/shared/: build.gradle.kts
domain/: Cargo.toml
domain/src/: download.rs  encode_decode.rs  format.rs  language.rs  lib.rs  media.rs  series.rs  subtitles.rs
ffmpeg/: Cargo.toml
ffmpeg/src/: encode.rs  extract.rs  lib.rs  spawn.rs  track.rs
ffmpeg/tests/fixtures/: h264_aac_nosub.mkv  h265_flac_3subs.mkv  hevc_aac_1sub.mkv
ios/SimpleCounter/: App.swift  ContentView.swift  Core.swift  Info.plist
ios/SimpleCounter.xcodeproj/: project.pbxproj
ios/SimpleCounter/Screen/: EpisodePicker.swift  ListScreen.swift  MediaDetailScreen.swift  NavigationContainer.swift  PlayerScreen.swift  ServerAddressEntryScreen.swift  SettingsScreen.swift
ios/SimpleCounter/Screen/List/: ListScreen.swift
ios/Streamy/: App.swift  ContentView.swift  Core.swift  Info.plist  NavigationContainer.swift  ServiceDiscovery.swift
ios/Streamy.xcodeproj/: project.pbxproj
ios/Streamy.xcodeproj/xcshareddata/xcschemes/: Streamy.xcscheme
ios/Streamy/DevelopmentAssets/: PreviewData.swift
ios/Streamy/Extensions/: Array.swift
ios/Streamy/Modifiers/: GetHeight.swift
ios/Streamy/Screen/: EpisodePicker.swift  NavigationContainer.swift  PlayerScreen.swift  SettingsScreen.swift
ios/Streamy/Screen/List/: ListScreen.swift
ios/Streamy/Screens/: ListScreen.swift  ServerAddressEntryScreen.swift  SettingsScreen.swift
ios/Streamy/Screens/AddressEntry/: DiscoveredAddresses.swift  ServerAddressEntryScreen.swift
ios/Streamy/Screens/Connection/: ConnectionScreen.swift  ManualAddressEntryScreen.swift
ios/Streamy/Screens/Detail/: EpisodePicker.swift  MediaDetailScreen.swift
ios/Streamy/Screens/Download/: DownloadItem.swift  DownloadScreen.swift  NewDownloadScreen.swift
ios/Streamy/Screens/Download/FileMapping/: FileMappingEntry.swift  FileMappingScreen.swift
ios/Streamy/Screens/Manager/: DownloadItem.swift  ManageMediaItem.swift  MediaManagerDetailScreen.swift  MediaManagerScreen.swift  NewDownloadScreen.swift  SeasonManagerScreen.swift
ios/Streamy/Screens/Manager/FileMapping/: FileMappingEntry.swift  FileMappingScreen.swift
ios/Streamy/Screens/Manager/Subtitles/: ConfigureSubtitleSearch.swift  DownloadSubtitles.swift  LanguageSelectorSheet.swift  SearchSubtitles.swift  SubtitleOption.swift  SubtitleSelectorSheet.swift
ios/Streamy/Screens/Player/: Player.swift  PlayerScreen.swift
ios/Streamy/Streamy.icon/: icon.json
open_subtitles/: Cargo.toml
open_subtitles/src/: dto.rs  lib.rs
server/: Cargo.toml
server/src/: dir.rs  download_handlers.rs  ffmpeg.rs  lib.rs  main.rs  media.rs  signal.rs  subtitle_handlers.rs  test_utils.rs
server/src/crawl/: mod.rs  movie.rs  series.rs  subtitles.rs
server/src/crawl/subtitles/: embed.rs  extract.rs  mod.rs
server/src/moving/: metadata.rs  mod.rs  movies.rs  series.rs
server/src/prepare/: convert.rs  handlers.rs  mod.rs  moving.rs
server/src/prepare/moving/: mod.rs  movies.rs  series.rs
server/src/process/: movies.rs  series.rs
server/src/service/: download.rs  mdns.rs  media.rs  mod.rs  prepare.rs  process.rs  subtitle.rs  torrent.rs  zeroconf.rs
server/test-data/: test.h265.mkv
server/test-data/crawl/example_movie/: meta.json
server/test-data/crawl/example_series/: meta.json
server/test-data/crawl/generate_series_subs/: 2engexample_subs.vtt
server/tests/fixtures/crawl/generate_series_subs/: 1turexample_subs.srt
shared/: Cargo.toml  build.rs  uniffi.toml
shared/shared.xcodeproj/: project.pbxproj
shared/src/: app.rs  lib.rs
shared/src/capabilities/: delay.rs  http.rs  mod.rs  navigation.rs  server_communication.rs  service_discovery.rs  storage.rs
shared/src/features/: data.rs  lifetime.rs  mod.rs  playback.rs  query.rs  server_communication.rs  subtitle.rs  utils.rs
shared/src/features/data/: contents.rs  downloads.rs  media.rs  mod.rs  series.rs
shared_types/: Cargo.toml  build.rs
shared_types/src/: lib.rs
subtitles/: Cargo.toml
subtitles/src/: lib.rs  subtitle_provider.rs
subtitles/src/open_subtitles/: dto.rs  mod.rs
torrent/: Cargo.toml  lib.rs
torrent/src/: api_types.rs  into_domain.rs  lib.rs  qbittorrent_client.rs  qbittorrent_web_api.rs
torrent/tests/: event_loop.rs
