[workspace]
members = ["shared", "shared_types", "domain", "server", "torrent"]
resolver = "1"

[workspace.dependencies]
anyhow = "1.0.98"
crux_core = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
futures = "0.3.31"
url = "2.5.4"
tokio = { version = "1.45.1", features = [
  "macros",
  "fs",
  "rt-multi-thread",
  "process",
  "io-util",
] }
