[workspace]
members = [
  "shared",
  "shared_types",
  "domain",
  "server",
  "torrent",
  "open_subtitles",
  "subtitles",
]
resolver = "1"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
crux_core = "0.15.0"
serde_json = "1.0.140"
futures = "0.3.31"
url = "2.5.4"
tokio = { version = "1.45.1", features = [
  "macros",
  "fs",
  "rt-multi-thread",
  "process",
  "io-util",
] }
log = { version = "0.4.27", features = ["kv_serde"] }
regex = "1.12.2"
reqwest = "0.12.24"
