[package]
name = "open_subtitles"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
url = { workspace = true }
percent-encoding = { version = "*" }
serde = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
