[package]
name = "server"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8.4", features = ["default", "json"] }
serde = { workspace = true }
domain = { path = "../domain" }
clap = { version = "4.5.40", features = ["derive"] }
futures = { workspace = true }
env_logger = "0.11.8"
log = { version = "0.4.27", features = ["kv_serde"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tower = "0.5.2"
