[package]
name = "server"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8.4", features = ["default", "json", "macros"] }
serde = { workspace = true }
domain = { path = "../domain" }
torrent = { path = "../torrent" }
clap = { version = "4.5.40", features = ["derive"] }
futures = { workspace = true }
env_logger = "0.11.8"
log = { workspace = true }
tower-http = { version = "0.6.6", features = ["fs"] }
tower = "0.5.2"
regex = { workspace = true }
