[package]
name = "shared"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
uniffi = "0.29.3"
wasm-bindgen = "0.2.100"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.29.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }
