[package]
name = "shared"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
domain = { path = "../domain" }
partially = { version = "0.2.1", features = ["default", "derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uniffi = "0.29.3"
url = { workspace = true }
wasm-bindgen = "0.2.100"
futures = { workspace = true }
regex = "1.12.2"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.29.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }
